bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:3: error: type mismatch;
 found   : Unit
 required: Boolean
    return 
    ^